commit for the demo

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row f-15">
       <div class="col-sm-3 text-left text-center-csss">
-        <a href="#"><img class="img-fluid mb-2" src="assets/images/about-us.png" alt="aboutus" /></a>
+        <a href="#"><img class="img-fluid mb-2" src="assets/images/icons/about-us.png" alt="aboutus" /></a>
         <a href="#">
           <p class="p-15 my-1">About</p>
         </a>
@@ -17,7 +17,7 @@
         </a>
       </div>
       <div class="col-sm-3 text-left text-center-csss">
-        <a href="#"><img class="img-fluid mb-2" src="assets/images/partner-portal.png" alt="Partner Portal" /></a>
+        <a href="#"><img class="img-fluid mb-2" src="assets/images/icons/partner-portal.png" alt="Partner Portal" /></a>
         <a href="#">
           <p class="p-15 my-1">Partner Portal</p>
         </a>
@@ -32,7 +32,7 @@
         </a>
       </div>
       <div class="col-sm-3 text-left text-center-csss">
-        <a href="#"><img class="img-fluid mb-2" src="assets/images/content-services.png" alt="Content & Services" /></a>
+        <a href="#"><img class="img-fluid mb-2" src="assets/images/icons/content-services.png" alt="Content & Services" /></a>
         <a href="#">
           <p class="p-15 my-1">Content & Services</p>
         </a>
@@ -52,19 +52,19 @@
         </a>
         <a href="#"><img class="img-fluid mb-2" src="assets/images/google-play.png" alt="Content & Services" /></a>
         <div class="pt-3">
-          <a href="#" class="p-16"><img class="img-fluid mb-2" src="assets/images/facebook.png"
+          <a href="#" class="p-16"><img class="img-fluid mb-2" src="assets/images/icons/facebook.png"
               alt="Content & Services" /></a>
-          <a href="#" class="p-16"><img class="img-fluid mb-2" src="assets/images/twitter.png"
+          <a href="#" class="p-16"><img class="img-fluid mb-2" src="assets/images/icons/twitter.png"
               alt="Content & Services" /></a>
-          <a href="#" class="p-16"><img class="img-fluid mb-2" src="assets/images/youtube.png"
+          <a href="#" class="p-16"><img class="img-fluid mb-2" src="assets/images/icons/youtube.png"
               alt="Content & Services" /></a>
         </div>
         <div class="pt-3">
-          <a href="#" class="p-16"><img class="img-fluid mb-2" src="assets/images/linkedin.png"
+          <a href="#" class="p-16"><img class="img-fluid mb-2" src="assets/images/icons/linkedin.png"
               alt="Content & Services" /></a>
-          <a href="#" class="p-16"><img class="img-fluid mb-2" src="assets/images/instagram.png"
+          <a href="#" class="p-16"><img class="img-fluid mb-2" src="assets/images/icons/instagram.png"
               alt="Content & Services" /></a>
-          <a href="#" class="p-16"><img class="img-fluid mb-2" src="assets/images/pinterest.png"
+          <a href="#" class="p-16"><img class="img-fluid mb-2" src="assets/images/icons/pinterest.png"
               alt="Content & Services" /></a>
         </div>
       </div>
