--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 
 <app-header></app-header>
-<router-outlet></router-outlet>
+<router-outlet (activate)="onActivate($event, outlet)" #outlet></router-outlet>
 <button type="button" (click)="myChatFun()">click</button>
 <app-footer></app-footer>
