--- a/src/app/basket/basket.component.html
+++ b/src/app/basket/basket.component.html
@@ -1,160 +1,122 @@
-<div class="container basket-t-b-m">       
-    <div class='col-sm-12 col-lg-12 col-md-12 col-xs-12'>
-        <h4 class="h4-mybasket-css"> <b class="">My Basket</b> <a href="javascript:void(0);"
-                class="pull-right btn btn-lg btn-primary" (click)="printComponent()"><b>Print</b></a> <a
-                href="javascript:void(0);" class="pull-right text-css-email" id="addClass" (click)="emailComponent()">Email</a> </h4>
-        <h4 class="basketvalue">You have
-            {{this.brandoffercarts.length + +this.localoffercarts.length}}&nbsp;{{(this.brandoffercarts.length + +this.localoffercarts.length) > 1 ? 'offers' : 'offer'}}
-            in your basket</h4>
-        <h4 class="basketvalue text-center selectall-margin-b"><a href="javascript:void(0)">Select All</a> &nbsp; <a
-                href="javascript:void(0)">Undo</a></h4>
-        <div>
-            <div style="padding-left: 0px" class="col-xs-12 col-sm-12 col-md-12 col-lg-12" *ngFor="let localoffer of localoffercarts; index as j">
-                <div style="padding-left: 0px" class="col-xs-12 col-sm-10 col-md-9 col-lg-6">
-                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 card">
-                        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center container-css offerdetail">
-                            <div class="vertical-center-css product-detail">
-                                <input type="checkbox" name="test" style="margin-right: 34px;" />
-                                <img class="brand-img-css vertical-center-css brand-img-css-mt image-responsive"
-                                    src="{{localoffer.digitalOfferLink}}">
-                            </div>
-                        </div>
-                        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 container-css offerdetail">
-                            <div class="vertical-center-css-1 product-detail">
-                                <h3 class="product-h4 branddesc branddescright"><b>{{localoffer.businessName}}</b></h3>
-                                <p class="product-p1 branddesc">{{localoffer.businessName}}</p>
-                                <p class="product-p1">4.5 <rating [(ngModel)]="starsCount" [readonly]="true"></rating>
-                                    (1001) </p>
-                                <p class="cashback-css">5% Cashback</p>
-                                <h5><a href="#">Know More > ></a></h5>
-                            </div>
-
-                        </div>
-                        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 container-css offerdetail">
-
-                            <div class="vertical-center-css product-detail">
-                                <a href="javascript:void(0)"><i class="fa fa-times color-gray" aria-hidden="true"
-                                        (click)="localOfferremove(j)"></i></a>
-                            </div>
+<div class="px-4 px-lg-0">
+    <div class="container">
+        <h3 class="clr-dark-blue py-3">Your<span class=" f-bold"> Basket</span></h3>
+    </div>
+    <div class="pb-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 mb-5">
+                    <!-- Shopping cart table -->
+                    <div class="table-responsive">
+                        <table class="table">
+                            <tbody>
+                                <tr>
+                                    <th scope="row" class="border-0 my-auto">
+                                        <div class="">
+                                            <div class="checkbox-container">
+                                                <label class="checkbox-label">
+                                                    <input type="checkbox">
+                                                    <span class="checkbox-custom rectangular"></span>
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </th>
+                                    <th scope="row" class="border-0">
+                                        <div class="p-2">
+                                            <img src="https://res.cloudinary.com/mhmd/image/upload/v1556670479/product-1_zrifhn.jpg"
+                                                alt="" width="70" class="img-fluid rounded shadow-sm">
+                                            <div class="ml-3 d-inline-block align-middle">
+                                                <h5 class="mb-0"> <a href="#"
+                                                        class="text-dark d-inline-block align-middle">Jersey Mike’s
+                                                        Subs</a></h5><span
+                                                    class="text-muted font-weight-normal font-italic d-block">Category:
+                                                    Watches</span>
+                                            </div>
+                                        </div>
+                                    </th>
+                                    <td class="border-0 align-middle clr-blue-light">
+                                        <h3><strong>$79.00</strong></h3>
+                                        <p class="f-bold">OFF</p>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th scope="row" class="border-0 my-auto">
+                                        <div class="">
+                                            <div class="checkbox-container">
+                                                <label class="checkbox-label">
+                                                    <input type="checkbox">
+                                                    <span class="checkbox-custom rectangular"></span>
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </th>
+                                    <th scope="row">
+                                        <div class="p-2">
+                                            <img src="https://res.cloudinary.com/mhmd/image/upload/v1556670479/product-3_cexmhn.jpg"
+                                                alt="" width="70" class="img-fluid rounded shadow-sm">
+                                            <div class="ml-3 d-inline-block align-middle">
+                                                <h5 class="mb-0"><a href="#" class="text-dark d-inline-block">Apple
+                                                        Airpods Pro 2019</a></h5><span
+                                                    class="text-muted font-weight-normal font-italic">Category:
+                                                    Electronics</span>
+                                            </div>
+                                        </div>
+                                    </th>
+                                    <td class="align-middle clr-blue-light">
+                                        <h3><strong>15%</strong></h3>
+                                        <p class="f-bold">OFF</p>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th scope="row" class="border-0 my-auto">
+                                        <div class="">
+                                            <div class="checkbox-container">
+                                                <label class="checkbox-label">
+                                                    <input type="checkbox">
+                                                    <span class="checkbox-custom rectangular"></span>
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </th>
+                                    <th scope="row">
+                                        <div class="p-2">
+                                            <img src="https://res.cloudinary.com/mhmd/image/upload/v1556670479/product-2_qxjis2.jpg"
+                                                alt="" width="70" class="img-fluid rounded shadow-sm">
+                                            <div class="ml-3 d-inline-block align-middle">
+                                                <h5 class="mb-0"> <a href="#" class="text-dark d-inline-block">Gray Nike
+                                                        running shoe</a></h5><span
+                                                    class="text-muted font-weight-normal font-italic">Category:
+                                                    Fashion</span>
+                                            </div>
+                                        </div>
+                                    <td class="align-middle clr-blue-light">
+                                        <h3><strong>$79.00</strong></h3>
+                                        <p class="f-bold">OFF</p>
+                                    </td>
+                                </tr>
+                               <!--  <tr>
+                                    <td  class="border-0 my-auto">
+                                        <div class="">
+                                            <p>Add more coupons to your Basket</p>
+                                            <a href="#" class="clr-blue-light">
+                                                <img class="img-fluid" src="assets/images/icons/location_icon.png"
+                                                    alt="Theme-Logo" /><span class="pl-2">Continue Shopping</span></a>
+                                        </div>
+                                    </td>
+                                </tr> -->
+                                
+                            </tbody>
+                        </table>
+                        <div class="">
+                            <p class="clr-blue-light">Add more coupons to your Basket</p>
+                            <a href="#" [routerLink]="['/home']" class="clr-blue-light f-bold">
+                                <img class="img-fluid vertical-bottom" src="assets/images/icons/back.png"
+                                    alt="Theme-Logo" /><span class="f-22 f-bold pl-2">Continue Shopping</span></a>
                         </div>
                     </div>
+                    <!-- End -->
                 </div>
             </div>
-            <div style="padding-left: 0px" class="col-xs-12 col-sm-12 col-md-12 col-lg-12" *ngFor="let brandoffer of brandoffercarts; index as i">
-                <div style="padding-left: 0px" class="col-xs-12 col-sm-10 col-md-9 col-lg-6">
-                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 card">
-                        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center container-css offerdetail">
-                            <div class="vertical-center-css product-detail">
-                                <input type="checkbox" name="test" style="margin-right: 34px;" />
-                                <img class="brand-img-css vertical-center-css brand-img-css-mt image-responsive"
-                                    src="{{brandoffer.image}}" />
-                            </div>
-                        </div>
-                        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 container-css offerdetail">
-                            <div class="vertical-center-css-1 product-detail">
-                                <h4 class="product-h4 branddesc branddescright"><b>{{brandoffer.brand}}</b></h4>
-                                <p class="product-p1 branddesc">{{brandoffer.description}}</p>
-                                <p class="product-p1">4.5 <rating [(ngModel)]="starsCount" [readonly]="true"></rating>
-                                    (1001) </p>
-                                <p class="cashback-css">5% Cashback</p>
-                                <h5><a href="javascript:void(0)" (click)="openInNewTab(brandoffer.link)">Know More >
-                                        ></a></h5>
-                            </div>
-
-                        </div>
-                        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 container-css offerdetail">
-
-                            <div class="vertical-center-css product-detail">
-                                <a href="javascript:void(0)"> <i class="fa fa-times color-gray" aria-hidden="true"
-                                        (click)="brandOfferremove(i)"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-
         </div>
-
-        <h4 class="basketvalue"> <a [routerLink]="['/']"><i class="fa fa-long-arrow-left" aria-hidden="true"></i> &nbsp;
-                Browse More Offers</a></h4>
-
     </div>
 </div>
-
-<div class="popup-box chat-popup" id="qnimate">
-    <div class="popup-head chat-box-head">
-        <div class="popup-head-left popup-head-left-css pull-left">New Message</div>
-        <div class="popup-head-right pull-right">
-               <a href="javascript:void(0)" class="chat-box-head-a" (click)="minimize()"><i class="fa fa-window-minimize emailicon" aria-hidden="true"></i> </a>
-               <!-- <a href="javascript:void" class="chat-box-head-a"> <i class="fa fa-arrows-alt emailicon" aria-hidden="true"></i> </a> -->
-               <a href="javascript:void(0)" class="chat-box-head-a" id="removeClass"><i class="fa fa-times emailicon" aria-hidden="true" style="font-size: 22px;"></i></a>
-        </div>
-    </div>
-    <div class="subject-input-text">
-        <div style="padding-left: 10px; padding-right: 13px;">
-                <tag-input [(ngModel)]="items"  
-                placeholder="Enter email"
-                secondaryPlaceholder="Enter email"
-                inputClass="width130"
-                >
-                </tag-input>
-                <!-- {{items.length}} -->
-        <!-- <input class="input-css-manual" name="email" autocomplete="false" placeholder="Email" /> -->
-        </div>
-        <div>
-        <input class="input-css-manual" name="subject" autocomplete="false" placeholder="Subject"/>
-    </div>
-    </div>
-    
-</div>
-<div class="notshow" id="emailcomponent">
-        <div class="row" *ngFor="let localoffer of localoffercarts; index as j">
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 card">
-                    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center container-css offerdetail">
-                        <div class="vertical-center-css product-detail">                        
-                            <img class="brand-img-css vertical-center-css brand-img-css-mt image-responsive"
-                                src="{{localoffer.digitalOfferLink}}">
-                        </div>
-                    </div>
-                    <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8 container-css offerdetail">
-                        <div class="vertical-center-css-1 product-detail">
-                            <h3 class="product-h4 branddesc branddescright"><b>{{localoffer.businessName}}</b></h3>
-                            <p class="product-p1 branddesc">{{localoffer.businessName}}</p>
-                            <p class="product-p1">4.5 <rating [(ngModel)]="starsCount" [readonly]="true"></rating>
-                                (1001) </p>
-                            <p class="cashback-css">5% Cashback</p>
-                            <h5><a href="#">Know More > ></a></h5>
-                        </div>    
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row" *ngFor="let brandoffer of brandoffercarts; index as i">
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 card">
-                    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center container-css offerdetail">
-                        <div class="vertical-center-css product-detail">                          
-                            <img class="brand-img-css vertical-center-css brand-img-css-mt image-responsive"
-                                src="{{brandoffer.image}}" />
-                        </div>
-                    </div>
-                    <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8 container-css offerdetail">
-                        <div class="vertical-center-css-1 product-detail">
-                            <h4 class="product-h4 branddesc branddescright"><b>{{brandoffer.brand}}</b></h4>
-                            <p class="product-p1 branddesc">{{brandoffer.description}}</p>
-                            <p class="product-p1">4.5 <rating [(ngModel)]="starsCount" [readonly]="true"></rating>
-                                (1001) </p>
-                            <p class="cashback-css">5% Cashback</p>
-                            <h5><a href="javascript:void(0)" (click)="openInNewTab(brandoffer.link)">Know More >
-                                    ></a></h5>
-                        </div>    
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-
