--- a/src/styles.css
+++ b/src/styles.css
@@ -10,8 +10,8 @@ body{
 .signup-bg{
     background-image: url("../src/assets/images/bg_signup.png");
 }
-.m-0{
-    margin: 0;
+.cursor-pointer {
+    cursor: pointer;
 }
 .d-inline{
     display: inline-block;
@@ -28,6 +28,9 @@ body{
 .f-18{
     font-size: 18px;
 }
+.f-22{
+    font-size: 22px;
+}
 .f-28{
     font-size: 28px;
 }
@@ -37,8 +40,14 @@ body{
 .mr-10{
     margin-right: 10px;;
 }
+.mt-30{
+    margin-top: 30px;
+}
 .m-minus16{
     margin-bottom: -16px;
+}
+.m-minu-30{
+    margin-bottom: -30px;
 }
 .pb-80{
     padding-bottom: 80px;
@@ -52,9 +61,18 @@ body{
 .pt-75{
     padding-top: 75px;
 }
+.ltr-space{
+    letter-spacing: 0.89px;
+}
 .clr-blue{
     color: #262b64;
     border-bottom: 2px solid #262b64;
+}
+.clr-dark-blue{
+    color: #262b64;
+}
+.clr-blue-light{
+    color: #323b94;
 }
 .bg-light-blue{
     background: #eff6ff;
@@ -62,15 +80,65 @@ body{
 .clr-green{
     color: #417505;
 }
-
+.clr-white{
+    color: #ffffff;
+}
+.embedded-body .bg-light-blue{
+    background-color: #ffcfdb !important;
+}
 .bg-blue{
     background-color: #2d3263;
 }
+.embedded-body{
+    background-color: #ffcfdb;
+}
 
+.home {
+    background: #ffcfdb;
+}
+.default {
+    background-color: #ffcfdb;
+}  
+.login-bg{
+    background-image: url("../src/assets/images/login-bg.png");
+}
+
+.overlay-text-right {
+    position: absolute;
+    top: 8px;
+    right: 16px;
+  }
+
+.prod-details{
+    letter-spacing: 0.89px;
+}
+.border-shadow {
+    border-radius: 5.5px;
+    box-shadow: 0 0 7px 0 rgba(90, 90, 90, 0.37)
+}
 .navbar-light .navbar-nav .nav-link {
     color: #182280;
     font-weight: 600;
     text-shadow: none;
+    margin-top: 5px;
+}
+a.nav-link{
+    color: #282828;
+}
+
+a.nav-link:hover{
+    color: #323b94;
+}
+button.mat-menu-trigger {
+    border: none;
+    background: #eeeeee00;
+    color: #182280;
+    font-weight: 600;
+    text-shadow: none;
+    outline: none;
+}
+button.mat-menu-item{
+    outline: none;
 }
 .btn-clr-blue-save{
     color: #fff !important;
@@ -80,14 +148,19 @@ body{
     border-radius: 25.5px;
     background-color: #2d3263;
     font-size: 16px;
+    text-decoration: none !important;
 }
 .btn-clr-blue{
     color: #fff;
     outline: none;
     padding: 6px;
     border-radius: 25.5px;
-    background-color: #2d3263;
+    background-color: #555c9d;
     font-size: 16px;
+}
+.btn-clr-blue:hover{
+    color: #fff;
+    background-color: #2d3263;
 }
 .cus-search{
     width: 743px !important;
@@ -118,4 +191,40 @@ body{
 .copy-right{
     letter-spacing: 3px;
     padding-top: 10px;
+}
+.position-absolute{
+    position: absolute;
+}
+
+.d-inline-flex{
+    display: inline-flex !important;
+}
+
+.right-0{
+    right: 0px;;
+}
+body::-webkit-scrollbar {
+    width: 10px;
+}
+ 
+body::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+ 
+body::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  outline: 1px solid slategrey;
+}
+
+.mat-menu-panel::-webkit-scrollbar {
+    width: 10px;
+}
+    
+.mat-menu-panel::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(107, 107, 107, 0.3);
+}
+    
+.mat-menu-panel::-webkit-scrollbar-thumb {
+    background-color: darkgrey;
+    outline: 1px solid slategrey;
 }
