add the router link add the basket page footer

--- a/src/app/basket/basket.component.html
+++ b/src/app/basket/basket.component.html
@@ -94,7 +94,7 @@
                                         <p class="f-bold">OFF</p>
                                     </td>
                                 </tr>
-                               <!--  <tr>
+                                <!--  <tr>
                                     <td  class="border-0 my-auto">
                                         <div class="">
                                             <p>Add more coupons to your Basket</p>
@@ -104,7 +104,7 @@
                                         </div>
                                     </td>
                                 </tr> -->
-                                
+
                             </tbody>
                         </table>
                         <div class="">
@@ -120,3 +120,21 @@
         </div>
     </div>
 </div>
+<footer class="py-5 bg-blue">
+    <div class="container">
+        <div class="col-md-12">
+            <div class="row">
+                <div class="col-md-6 clr-white f-28">
+                    <span class="f-bold">03</span><span class="px-3">Coupons Selected</span><span><a
+                            class="btn-white f-bold">
+                            Clear all</a></span>
+                </div>
+                <div class="col-md-6 text-right">
+                    <button class="btn btn-default transparent-btn-css mx-3" type="submit">Email It</button>
+                    <button class="btn btn-default white-btn-css f-bold" type="submit">Print Coupons</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- /.container -->
+</footer>
