add the home page categories

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -52,19 +52,19 @@
         </a>
         <a href="#"><img class="img-fluid mb-2" src="assets/images/google-play.png" alt="Content & Services" /></a>
         <div class="pt-3">
-          <a href="#" class="p-16"><img class="img-fluid mb-2" src="assets/images/icons/facebook.png"
+          <a href="https://www.facebook.com/" target="_blank" class="p-16"><img class="img-fluid mb-2" src="assets/images/icons/facebook.png"
               alt="Content & Services" /></a>
-          <a href="#" class="p-16"><img class="img-fluid mb-2" src="assets/images/icons/twitter.png"
+          <a href="https://twitter.com/" class="p-16"><img class="img-fluid mb-2" src="assets/images/icons/twitter.png"
               alt="Content & Services" /></a>
-          <a href="#" class="p-16"><img class="img-fluid mb-2" src="assets/images/icons/youtube.png"
+          <a href="https://www.youtube.com/" class="p-16"><img class="img-fluid mb-2" src="assets/images/icons/youtube.png"
               alt="Content & Services" /></a>
         </div>
         <div class="pt-3">
-          <a href="#" class="p-16"><img class="img-fluid mb-2" src="assets/images/icons/linkedin.png"
+          <a href="https://in.linkedin.com/" class="p-16"><img class="img-fluid mb-2" src="assets/images/icons/linkedin.png"
               alt="Content & Services" /></a>
-          <a href="#" class="p-16"><img class="img-fluid mb-2" src="assets/images/icons/instagram.png"
+          <a href="https://www.instagram.com/" class="p-16"><img class="img-fluid mb-2" src="assets/images/icons/instagram.png"
               alt="Content & Services" /></a>
-          <a href="#" class="p-16"><img class="img-fluid mb-2" src="assets/images/icons/pinterest.png"
+          <a href="https://in.pinterest.com/" class="p-16"><img class="img-fluid mb-2" src="assets/images/icons/pinterest.png"
               alt="Content & Services" /></a>
         </div>
       </div>
