--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,3 +1,15 @@
+.menu-img{
+  width: 20px;
+  margin-right: 16px;
+}
+.categories-text-underline{
+  text-align: center;
+  border-top: 1px solid #000;
+  font-weight: 600;
+}
+.mat-menu-item{
+  padding: 0px 26px;
+}
 /* carousel */
 #quote-carousel 
 {
