change the signup form fields

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -50,22 +50,22 @@
         <a href="#">
           <p class="p-15 mx-5">Download & View offers on the go !</p>
         </a>
-        <a href="#"><img class="img-fluid mb-2" src="assets/images/google-play.png" alt="Content & Services" /></a>
+        <a href="https://play.google.com/store" target="_blank"><img class="img-fluid mb-2" src="assets/images/google-play.png" alt="Play Store" /></a>
         <div class="pt-3">
           <a href="https://www.facebook.com/" target="_blank" class="p-16"><img class="img-fluid mb-2" src="assets/images/icons/facebook.png"
-              alt="Content & Services" /></a>
-          <a href="https://twitter.com/" class="p-16"><img class="img-fluid mb-2" src="assets/images/icons/twitter.png"
-              alt="Content & Services" /></a>
-          <a href="https://www.youtube.com/" class="p-16"><img class="img-fluid mb-2" src="assets/images/icons/youtube.png"
-              alt="Content & Services" /></a>
+              alt="facebook" /></a>
+          <a href="https://twitter.com/" target="_blank" class="p-16"><img class="img-fluid mb-2" src="assets/images/icons/twitter.png"
+              alt="twitter" /></a>
+          <a href="https://www.youtube.com/" target="_blank" class="p-16"><img class="img-fluid mb-2" src="assets/images/icons/youtube.png"
+              alt="youtube" /></a>
         </div>
         <div class="pt-3">
-          <a href="https://in.linkedin.com/" class="p-16"><img class="img-fluid mb-2" src="assets/images/icons/linkedin.png"
-              alt="Content & Services" /></a>
-          <a href="https://www.instagram.com/" class="p-16"><img class="img-fluid mb-2" src="assets/images/icons/instagram.png"
-              alt="Content & Services" /></a>
-          <a href="https://in.pinterest.com/" class="p-16"><img class="img-fluid mb-2" src="assets/images/icons/pinterest.png"
-              alt="Content & Services" /></a>
+          <a href="https://in.linkedin.com/" target="_blank" class="p-16"><img class="img-fluid mb-2" src="assets/images/icons/linkedin.png"
+              alt="linkedin" /></a>
+          <a href="https://www.instagram.com/" target="_blank" class="p-16"><img class="img-fluid mb-2" src="assets/images/icons/instagram.png"
+              alt="instagram" /></a>
+          <a href="https://in.pinterest.com/" target="_blank" class="p-16"><img class="img-fluid mb-2" src="assets/images/icons/pinterest.png"
+              alt="pinterest" /></a>
         </div>
       </div>
     </div>
