--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -19,29 +19,16 @@
             <form class="form-horizontal" role="form">
               <div class="form-group">
                 <div class="col-sm-12">
-                  <input class="form-control inpt" id="fullName" placeholder="Full Name"
-                    required="" type="name">
-                </div>
-              </div>
-              <div class="form-group">
-                <div class="col-sm-12">
-                  <input class="form-control inpt" id="Email" placeholder="Email"
+                    <input class="form-control inpt" id="Email" placeholder="Email"
                     required="" type="email">
                 </div>
               </div>
               <div class="form-group">
                 <div class="col-sm-12">
-                  <input class="form-control inpt" id="inputPassword" placeholder="DOB" required=""
-                    type="password">
+                  <input class="form-control inpt" id="Password" placeholder="Password"
+                    required="" type="Password">
                 </div>
               </div>
-              <div class="form-group">
-                <div class="col-sm-12">
-                  <input class="form-control inpt" id="inputPassword3" placeholder="Mobile Number"
-                    required="" type="password">
-                </div>
-              </div>
-
               <div class="form-group last">
                 <div class="col-sm-12">
                   <button type="submit" [routerLink]="['/home']" class="col-sm-12 btn-clr-blue btn btn-sm">
